--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Anton|Fugaz+One|Josefin+Sans|Niconne" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Vibur|Raleway|Plaster" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
@@ -16,13 +16,13 @@
   <!-- <img class="img-responsive" src="assets/images/mine.jpg"> -->
   <div class="jumbotron">
     <h1 class="display-4">trivia game</h1>
-    <p class="lead col-md-8">answer some trivia questions and don't take too long, alright?
+    <p class="lead">answer some trivia questions <br>and don't take too long, alright?
   </div>
 
   <div id="mainWrapper" class="container">
     <div id="mainRow" class="row">
       <div id="mainSection" class="col-md-9">
-        <div id="questionText" class="row"><h2></h2>
+        <div id="questionText" class="row"><strong></strong>
         </div>
 
         <div id="optionButtons">
