--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="mainWrapper" class="container">
     <div id="mainRow" class="row">
       <div id="mainSection" class="col-md-9">
-        <div id="questionText" class="row"><strong></strong>
+        <div id="questionText" class="row"><h2></h2>
         </div>
 
         <div id="optionButtons">
