--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Vibur|Raleway|Plaster" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Vibur|Plaster|Righteous|Elsie+Swash+Caps" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
